remove margin for name and price

--- a/src/pages/productCategory/ProductCategory.module.css
+++ b/src/pages/productCategory/ProductCategory.module.css
@@ -32,11 +32,13 @@
 .name {
     font-size: large;
     height: 7.5%;
+    margin: 0;
 }
 
 .price {
     font-size: large;
     height: 7.5%;
+    margin: 0;
 }
 
 .addToCart {
