--- a/src/pages/homepage/Homepage.module.css
+++ b/src/pages/homepage/Homepage.module.css
@@ -1,4 +1,4 @@
-.heading{
+.heading {
     width: 100%;
     text-align: center;
     font-size: xx-large;
@@ -6,12 +6,13 @@
     font-weight: 600;
 }
 
-.linkElement{
+.linkElement {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 45%;
-    height: 200px;
+    width: 45vw;
+    padding: 5px;
+    /* height: 200px; */
     font-size: larger;
     text-decoration: none;
     color: black;
@@ -20,20 +21,20 @@
     cursor: pointer;
 }
 
-.productImage{
+.productImage {
     height: 100%;
     width: 50%;
     object-fit: contain;
     margin-left: 3%;
 }
 
-.productName{
+.productName {
     width: 50%;
     font-size: x-large;
     text-align: center;
 }
 
-.categories{
+.categories {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,9 +42,29 @@
     gap: 50px;
 }
 
-.categoryHeading{
+.categoryHeading {
     margin: 30px 0px;
     font-size: x-large;
     width: 100%;
     text-align: center;
+}
+
+@media all and (max-width:1000px) {
+    .linkElement {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80vw;
+        /* height: 200px; */
+    }
+    .productImage {
+        width: 100%;
+        background-color: aquamarine;
+        object-fit: contain;
+        margin: auto;
+    }
+
+    .productName{
+        margin: 10px 0;
+    }
 }
