--- a/src/pages/productCategory/ProductCategory.module.css
+++ b/src/pages/productCategory/ProductCategory.module.css
@@ -64,7 +64,7 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
-@media all and (max-width:750px) {
+@media all and (max-width:850px) {
     .container{
         grid-template-columns: 1fr 1fr;
     }
@@ -72,7 +72,12 @@
 @media all and (max-width:600px) {
     .container{
         grid-template-columns: 1fr;
-        width: 80vw;
+        width: 70vw;
         margin: auto;
+    }
+}
+@media all and (max-width:500px) {
+    .container{
+        width: 80vw;
     }
 }
