--- a/src/pages/homepage/Homepage.module.css
+++ b/src/pages/homepage/Homepage.module.css
@@ -8,11 +8,12 @@
 
 .linkElement {
     display: flex;
-    justify-content: space-between;
+    width: 30vw;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    width: 45vw;
     padding: 5px;
-    /* height: 200px; */
+    height: 250px;
     font-size: larger;
     text-decoration: none;
     color: black;
@@ -22,10 +23,9 @@
 }
 
 .productImage {
-    height: 100%;
-    width: 50%;
-    object-fit: contain;
-    margin-left: 3%;
+    height: 80%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .productName {
@@ -35,10 +35,11 @@
 }
 
 .categories {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px 40px;
+    display: grid;
+    margin: 0 auto;
+    width: 80%;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
     gap: 50px;
 }
 
@@ -49,33 +50,39 @@
     text-align: center;
 }
 
-@media all and (max-width:1000px) {
+@media all and (max-width:1500px) {
     .linkElement {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 50vw;
-        /* height: 200px; */
-    }
-    .productImage {
-        width: 100%;
-        background-color: aquamarine;
-        object-fit: contain;
-        margin: auto;
-    }
-
-    .productName{
-        margin: 10px 0;
+        width: 30vw;
     }
 }
 
 @media all and (max-width:850px) {
+    .categories{
+        width: 90%;
+    }
     .linkElement {
-        width: 60vw;
+        width: 40vw;
     }
 }
-@media all and (max-width:600px) {
+
+@media all and (max-width:650px) {
+    .categories{
+        grid-template-columns: 1fr;
+        width: 85%;
+    }
+    .linkElement {
+        width: 65vw;
+        height: 300px;
+    }
+}
+@media all and (max-width:550px) {
+    .linkElement {
+        width: 75vw;
+    }
+}
+@media all and (max-width:450px) {
     .linkElement {
         width: 80vw;
+        height: 250px;
     }
 }
